--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,28 +3,28 @@
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.08); /* sombra hacia arriba */
 }
 .footer .container {
-    padding: 4.2rem 2.8rem;
+    padding: 4rem 1.5rem;
 }
 .footer__container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
 }
-.footer__top, .footer__section {
-    padding: 0 1.5rem 2.8rem;
-}
+/* Footer-Top (Logo y redes) */
 .footer__top {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1.4rem;
-    border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
 .footer__logo {
-    height: 5.5rem;
+    height: 4.5rem;
 }
 .footer__socials {
     display: flex;
+    justify-content: center;
     gap: 0.3rem;
 }
 .footer__social-link {
@@ -44,15 +44,22 @@
 .footer__social-icon {
     height: 1.4rem;
 }
-.footer__section:nth-child(4) h5 {
-    padding-bottom: 0.7rem;
+
+/* Secciones generales del footer */
+.footer__section {
+    display: flex;
+    flex-direction: column;
+}
+.footer__section-title {
+    text-align: center;
 }
 .footer__list {
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
+    align-items: center;
 }
-.footer__link{
+.footer__link {
     font-size: 1.1rem;
     display: flex;
     gap: 0.7rem;
@@ -63,21 +70,19 @@
     color: var(--color-secondary);
     text-decoration: underline;
 }
-.footer__section:nth-child(4) h5,
-.footer__text,
-.footer__newsletter,
-.footer__bottom {
-    text-align: center;
-}
 .footer__icon {
     color: var(--color-primary);
 }
 .footer__text {
     font-size: 1.3rem;
     line-height: 2.2rem;
+    text-align: center;
 }
+
+/* Newsletter */
 .footer__newsletter {
     display: flex;
+    justify-content: center;
     padding-top: 1.4rem;
 }
 .footer__newsletter-input {
@@ -86,23 +91,101 @@
 .footer__newsletter-button {
     border-radius: 0 0.5rem 0.5rem 0;
 }
+
+/* Formas de pago */
 .footer__payment {
-    grid-column: 1/5;
-    grid-row: 2/3;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2rem;
 }
 .footer__payment-icon {
-    height: 6rem;
+    height: 5rem;
 }
-.footer__bottom {
-    grid-column: 1/5;
-    grid-row: 3/4;
-    padding-top: 4rem;
-}
+
+/* Copyright */
 .footer__copy {
     font-size: 1.2rem;
     font-weight: 600;
 }
+
+@media (min-width: 768px) {
+    .footer__container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: flex-start;
+        gap: 0;
+    }
+    .footer__top {
+        align-items: center;
+        border-right: 1px solid rgba(0, 0, 0, 0.2);
+        height: 100%;
+        justify-content: flex-start;
+    }
+    .footer__top, .footer__section {
+        padding: 0 1.5rem 2.8rem;
+    }
+    .footer__section:nth-child(4) {
+        grid-column: 1/4;
+        grid-row: 2/3;
+    }
+    .footer__list {
+        align-items: flex-start;
+    }
+    .footer__payment {
+        grid-column: 1/4;
+        grid-row: 3/4;
+    }
+    .footer__bottom {
+        grid-column: 1/4;
+        grid-row: 4/5;
+        padding-top: 4rem;
+    }
+    .footer__copy {
+        text-align: center;
+    }
+}   
+
+@media (min-width: 1024px) {
+    .footer .container {
+        padding: 4.2rem 2.8rem;
+    }
+    .footer__container {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .footer__top {
+        justify-content: flex-start;
+        height: 100%;
+    }
+    .footer__logo {
+        height: 5.5rem;
+    }
+    .footer__section:nth-child(4) {
+        grid-column: 4/5;
+        grid-row: 1/2;
+    }
+    .footer__section:nth-child(4) .footer__section-title {
+        padding-bottom: 0.7rem;
+        text-align: center;
+    }
+    .footer__section-title {
+        text-align: left;
+    }
+    
+    .footer__newsletter,
+    .footer__bottom {
+        text-align: center;
+    }
+    .footer__payment {
+        grid-column: 1/5;
+        grid-row: 2/3;
+    }
+    .footer__payment-icon {
+        height: 6rem;
+    }
+    .footer__bottom {
+        grid-column: 1/5;
+        grid-row: 3/4;
+    }
+}
+
