--- a/src/domains/brands/ui/BrandsSection.css
+++ b/src/domains/brands/ui/BrandsSection.css
@@ -1,32 +1,32 @@
 .brands-section__grid {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    justify-items: center;
-    align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  align-items: center;
 }
 .brands-section__item {
-    width: 12.4rem;
-    height: 12.4rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--white);
-    border-radius: 0.5rem;
-    transition: background-color 0.3s ease;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  transition: background-color 0.3s ease;
 }
 .brands-section__link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 85%;
+  height: 85%;
   transition: transform 0.3s ease;
 }
 .brands-section__logo {
-    max-width: 70%;
-    max-height: 70%;
-    object-fit: contain;
-    transition: transform 0.3s ease;
+  max-width: 70%;
+  max-height: 70%;
+  object-fit: contain;
+  transition: transform 0.3s ease;
 }
 .brands-section__item:hover {
   background-color: rgba(0, 0, 0, 0.05);
@@ -35,7 +35,38 @@
   transform: scale(1.1);
 }
 .brands-section__view-all {
-    display: flex;
-    justify-content: center;
-    padding: 2rem 0 4.9rem;
+  display: flex;
+  justify-content: center;
+  padding: 2rem 0 4.9rem;
 }
+@media (min-width: 340px) {
+  .brands-section__grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 466px) {
+  .brands-section__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media (min-width: 578px) {
+  .brands-section__grid {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+@media (min-width: 690px) {
+  .brands-section__grid {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+@media (min-width: 826px) {
+  .brands-section__grid {
+    grid-template-columns: repeat(7, 1fr);
+  }
+}
+@media (min-width: 942px) {
+  .brands-section__grid {
+    grid-template-columns: repeat(8, 1fr);
+  }
+}
+
