--- a/src/domains/products/ui/ProductSection.css
+++ b/src/domains/products/ui/ProductSection.css
@@ -1,6 +1,23 @@
 .product-section__grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
     padding: 1.4rem 0;
+}
+
+@media (min-width: 576px) {
+    .product-section__grid {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
+        padding: 1.4rem 0;
+    }
+}
+
+@media (min-width: 992px) {
+    .product-section__grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+        padding: 1.4rem 0;
+    }
 }
