--- a/src/domains/products/ui/ProductCard.css
+++ b/src/domains/products/ui/ProductCard.css
@@ -9,8 +9,8 @@
 }
 .product-section__discount-circle {
     background-color: var(--color-primary);
-    width: 7rem;
-    height: 7rem;
+    width: 4.2rem;
+    height: 4.2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,14 +21,14 @@
     z-index: 2;
 }
 .product-section__discount-circle p {
-    font-size: 1.7rem;
+    font-size: 1.1rem;
     color: var(--white);
 }
 .product-section__image-wrapper {
     position: relative;
-    height: 25rem;
     width: 100%;
-    padding: 0 3.5rem;
+    aspect-ratio: 3.5 / 4;
+    padding: 0 1.5rem;
     z-index: 1;
 }
 .product-section__out-of-stock {
@@ -44,6 +44,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 .product-section__info {
     display: flex;
@@ -92,4 +93,40 @@
     display: flex;
     justify-content: center;
     padding: 2.1rem 0;
+}
+@media (min-width: 384px) {
+    .product-section__image-wrapper {
+        padding: 0 2.5rem;
+    }
+}
+@media (min-width: 576px) {
+    .product-section__image-wrapper {
+        padding: 0 3rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .product-section__discount-circle {
+        width: 5.6rem;
+        height: 5.6rem;
+    }
+    .product-section__discount-circle p {
+        font-size: 1.4rem;
+    }
+    .product-section__image-wrapper {
+        padding: 0 3.3rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .product-section__discount-circle {
+        width: 7rem;
+        height: 7rem;
+    }
+    .product-section__discount-circle p {
+        font-size: 1.7rem;
+    }
+    .product-section__image-wrapper {
+        padding: 0 3.5rem;
+    }
 }
