--- a/src/components/header/navbar/NavBar.module.css
+++ b/src/components/header/navbar/NavBar.module.css
@@ -48,19 +48,19 @@
     color: var(--color-primary-hover);
 }
 
-/* ====== MENU PRINCIPAL ====== */
-.menu {
+/* ====== SIDEBAR ====== */
+.sidebarList {
     display: flex;
     flex-direction: column;
     width: 100%;
     order: 2;
     padding: 0 1.5rem 1.5rem;
 }
-.menuItem:hover,
+.sidebarItem:hover,
 .actionIcon:hover {
     background-color: var(--color-accent);
 }
-.menuLink {
+.sidebarLink {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -70,10 +70,10 @@
     font-size: 1.6rem;
     color: var(--gray-800);
 }
-.menuLink:hover {
+.sidebarLink:hover {
     color: var(--white);
 }
-.menuIcon {
+.sidebarIcon {
     font-size: 1.2rem;
 }
 
@@ -165,6 +165,7 @@
     color: #c00;
 }
 
+
 /* ====== MEDIA QUERIES ====== */
 @media (min-width: 992px) {
     .nav {
@@ -186,7 +187,10 @@
     .mobileHeader {
         display: none;
     }
-    .menu {
+
+/* ====== MENÚ ====== */
+    .menuList {
+        display: flex;
         flex-direction: row;
         order: 1;
         padding: 0 1.5rem;
@@ -200,6 +204,7 @@
         background-color: transparent;
     }
     .menuLink {
+        display: flex;
         align-items: flex-start;
         gap: 0.4rem;
         padding: 1.1rem;
@@ -247,4 +252,7 @@
         top: -5px;
         right: -10px;
     }
+    
 }
+
+
