--- a/src/domains/brands/ui/BrandsSection.css
+++ b/src/domains/brands/ui/BrandsSection.css
@@ -1,6 +1,6 @@
 .brands-section__grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
   justify-items: center;
   align-items: center;
 }
@@ -39,34 +39,3 @@
   justify-content: center;
   padding: 2rem 0 4.9rem;
 }
-@media (min-width: 340px) {
-  .brands-section__grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-@media (min-width: 466px) {
-  .brands-section__grid {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-@media (min-width: 578px) {
-  .brands-section__grid {
-    grid-template-columns: repeat(5, 1fr);
-  }
-}
-@media (min-width: 690px) {
-  .brands-section__grid {
-    grid-template-columns: repeat(6, 1fr);
-  }
-}
-@media (min-width: 826px) {
-  .brands-section__grid {
-    grid-template-columns: repeat(7, 1fr);
-  }
-}
-@media (min-width: 942px) {
-  .brands-section__grid {
-    grid-template-columns: repeat(8, 1fr);
-  }
-}
-
