Modificando metodo de pago

--- a/src/components/header/navbar/NavBar.module.css
+++ b/src/components/header/navbar/NavBar.module.css
@@ -347,8 +347,8 @@
     .cartQty button {
         border: none;
         background: #eee;
-        width: 22px;
-        height: 22px;
+        width: 2.2rem;
+        height: 2.2rem;
         border-radius: 5px;
         cursor: pointer;
     }
