--- a/src/domains/cart/CartPage.css
+++ b/src/domains/cart/CartPage.css
@@ -154,7 +154,6 @@
 .orderSummary {
   position: sticky;
   top: 10rem;
-  align-self: start;
 }
 
 /* --- Responsivo --- */
@@ -173,7 +172,6 @@
   }
 
   .orderSummary {
-    position: sticky;
-    top: 10rem;
+    position: static;
   }
 }
